# ellipticoin-telegram-bot

./: .gitignore  index.mjs  mintableTokenABI.json  package-lock.json  package.json  sendDai.mjs
contracts/telegram_bot/: Cargo.toml  telegram_bot.wast
contracts/telegram_bot/src/: error.rs  lib.rs  telegram_bot.rs
