[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2018"

[lib]
crate-type =["cdylib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[dev-dependencies]
ellipticoin-test-framework = { path = "/Users/masonf/src/rust-ellipticoin-test-framework" }

[dependencies]
lazy_static = "1.3.0"
ellipticoin = { path = "/Users/masonf/src/rust-ellipticoin" }
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc" }
wasm-rpc = {"path" = "/Users/masonf/src/rust-wasm-rpc/wasm-rpc"}
wasm-rpc-macros = {"path" = "/Users/masonf/src/rust-wasm-rpc/wasm-rpc-macros"}
